# SpotifyThing

./: .gitignore  README.md  SpotifyThing.sln  main.py  pyproject.toml
SpotifyThing/: Program.cs  SpotifyThing.csproj
SpotifyThing/Properties/: AssemblyInfo.cs
