[tool.poetry]
name = "SpotifyThing"
version = "2.0.0"
description = "A simple Python project to do things with Spotify"
authors = ["Michael Kwok <michael.kwok00@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["Spotify"]

[tool.poetry.dependencies]
python = "^3.10"
questionary = "^1.10.0"
python-dotenv = "^0.19.2"
tekore = "^4.0.0"
pyexcel = "^0.6.7"
pyexcel-xlsx = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = { version = "^21.10b0", allow-prereleases = true }
isort = "^5.10.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
